--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <galagoVersion>3.13</galagoVersion>
         <luceneVersion>7.1.0</luceneVersion>
         <mainClass>edu.umass.cics.ciir.irene.MainKt</mainClass>
-        <kotlin.version>1.2.10</kotlin.version>
     </properties>
 
     <repositories>
@@ -81,13 +80,13 @@
       <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-stdlib-jdk8</artifactId>
-        <version>${kotlin.version}</version>
+        <version>${kotlinVersion}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-reflect</artifactId>
-        <version>${kotlin.version}</version>
+        <version>${kotlinVersion}</version>
         <scope>test</scope>
       </dependency>
 
@@ -133,7 +132,7 @@
                     <experimentalCoroutines>enable</experimentalCoroutines>
                 </configuration>
                 <groupId>org.jetbrains.kotlin</groupId>
-                <version>${kotlin.version}</version>
+                <version>${kotlinVersion}</version>
                 <executions>
                     <execution>
                         <id>compile</id>
