--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <kotlinVersion>1.2.40</kotlinVersion>
         <galagoVersion>3.13</galagoVersion>
         <luceneVersion>7.1.0</luceneVersion>
+        <jacksonVersion>2.9.5</jacksonVersion>
         <mainClass>edu.umass.cics.ciir.irene.MainKt</mainClass>
     </properties>
 
@@ -97,13 +98,33 @@
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-reflect</artifactId>
         <version>${kotlinVersion}</version>
-        <scope>test</scope>
       </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>0.20</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jacksonVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jacksonVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jacksonVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>${jacksonVersion}</version>
         </dependency>
 
     </dependencies>
