--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
                 </executions>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
                 <executions>
@@ -234,7 +234,7 @@
                         </filter>
                     </filters>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
         </plugins>
     </build>
