learning to rank for trec-news-bg

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,10 @@
                     <groupId>edu.stanford.nlp</groupId>
                     <artifactId>stanford-corenlp</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>info.bliki.wiki</groupId>
+                    <artifactId>bliki-core</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
