--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,60 @@
-
 allprojects {
   ext {
     kotlinVersion = "1.3.72"
     luceneVersion = "7.1.0"
     jacksonVersion = "2.10.0.pr1"
   }
-  repositories {
-    mavenCentral()
-    jcenter()
-    mavenLocal()
-    maven { url "https://jitpack.io" }
-  }
+
+  group = 'edu.umass.cics.ciir'
+  version = '0.6-SNAPSHOT'
 
   tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
   }
 
   apply plugin: 'java'
+}
+
+subprojects {
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+
+  repositories {
+    mavenLocal()
+    mavenCentral()
+    jcenter()
+    maven { url "https://jitpack.io" }
+  }
+  dependencies {
+    implementation group: "com.github.ben-manes.caffeine", name: "caffeine", version: "2.3.1"
+    implementation group: "net.sf.trove4j", name: "trove4j", version: "3.0.3"
+    implementation group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.6.39'
+    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-core', version: luceneVersion
+    implementation group: 'org.apache.lucene', name: 'lucene-benchmark', version: luceneVersion
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: jacksonVersion
+    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: kotlinVersion
+    testImplementation group: 'junit', name: 'junit', version: '3.12'
+    testImplementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: kotlinVersion
+  }
+
+  buildscript {
+    ext {
+      kotlinVersion = "1.3.72"
+      junitPlatformVersion = "1.0.0"
+    }
+    repositories {
+      mavenCentral()
+      jcenter()
+    }
+
+    dependencies {
+      classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+      classpath "org.junit.platform:junit-platform-gradle-plugin:$junitPlatformVersion"
+      classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+    }
+  }
 }
