--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ allprojects {
   }
 
   apply plugin: 'java'
+  apply plugin: 'maven-publish'
 }
 
 subprojects {
@@ -29,22 +30,27 @@ subprojects {
     implementation group: "com.github.ben-manes.caffeine", name: "caffeine", version: "2.3.1"
     implementation group: "net.sf.trove4j", name: "trove4j", version: "3.0.3"
     implementation group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.6.39'
-    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
+
+    // Lucene:
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: luceneVersion
     implementation group: 'org.apache.lucene', name: 'lucene-benchmark', version: luceneVersion
+    // JSON encoding:
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: jacksonVersion
+
+    // Kotlin stdlib
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: kotlinVersion
-    testImplementation group: 'junit', name: 'junit', version: '3.12'
+
+    // Testing:
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: kotlinVersion
   }
 
   buildscript {
     ext {
       kotlinVersion = "1.3.72"
-      junitPlatformVersion = "1.0.0"
     }
     repositories {
       mavenCentral()
@@ -53,7 +59,6 @@ subprojects {
 
     dependencies {
       classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-      classpath "org.junit.platform:junit-platform-gradle-plugin:$junitPlatformVersion"
       classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
     }
   }
