--- a/irene-core/build.gradle
+++ b/irene-core/build.gradle
@@ -7,3 +7,9 @@ jar {
     attributes 'Main-Class': 'edu.umass.cics.ciir.irene.MainKt'
   }
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions {
+    jvmTarget = '1.8'
+  }
+}
