--- a/irene-galago/build.gradle
+++ b/irene-galago/build.gradle
@@ -11,3 +11,9 @@ dependencies {
     exclude(module: 'bliki-core')
   }
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions {
+    jvmTarget = '1.8'
+  }
+}
