--- a/irene-core/build.gradle
+++ b/irene-core/build.gradle
@@ -1,10 +1,17 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'application'
+
+def mainClass = 'edu.umass.cics.ciir.irene.MainKt'
+application {
+  mainClassName = mainClass
+  applicationDefaultJvmArgs = ['-ea', '-Xmx7G']
+}
 
 jar {
   manifest {
-    attributes 'Main-Class': 'edu.umass.cics.ciir.irene.MainKt'
+    attributes 'Main-Class': mainClass
   }
 }
 
