--- a/irene-galago/build.gradle
+++ b/irene-galago/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'com.github.johnrengelman.shadow'
 
 def galagoVersion = "3.16"
 
 dependencies {
   implementation project(":irene-core")
   implementation(group: 'org.lemurproject.galago', name: 'core', version: galagoVersion) {
+    // This is pretty opinionated, but it's like several gigs.
     exclude(module: 'stanford-corenlp')
     exclude(module: 'bliki-core')
   }
