moving toward working in intellij, abandoning for now :(

--- a/build.gradle
+++ b/build.gradle
@@ -69,3 +69,12 @@ subprojects {
     }
   }
 }
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from components.java
+    }
+  }
+}
+
