--- a/irene-core/build.gradle
+++ b/irene-core/build.gradle
@@ -20,3 +20,12 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     jvmTarget = '1.8'
   }
 }
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from components.java
+    }
+  }
+}
+
