add publish to galago component

--- a/irene-galago/build.gradle
+++ b/irene-galago/build.gradle
@@ -18,3 +18,11 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
   }
 }
 
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from components.java
+    }
+  }
+}
+
