gradle updates for use in maven

--- a/build.gradle
+++ b/build.gradle
@@ -75,10 +75,19 @@ subprojects {
   }
 }
 
+
 publishing {
   publications {
     mavenJava(MavenPublication) {
       from components.java
+        versionMapping {
+          usage('java-api') {
+            fromResolutionOf('runtimeClasspath')
+          }
+          usage('java-runtime') {
+            fromResolutionResult()
+          }
+        }
     }
   }
 }
