--- a/irene-galago/build.gradle
+++ b/irene-galago/build.gradle
@@ -22,6 +22,14 @@ publishing {
   publications {
     mavenJava(MavenPublication) {
       from components.java
+        versionMapping {
+          usage('java-api') {
+            fromResolutionOf('runtimeClasspath')
+          }
+          usage('java-runtime') {
+            fromResolutionResult()
+          }
+        }
     }
   }
 }
