--- a/irene-core/build.gradle
+++ b/irene-core/build.gradle
@@ -25,6 +25,14 @@ publishing {
   publications {
     mavenJava(MavenPublication) {
       from components.java
+        versionMapping {
+          usage('java-api') {
+            fromResolutionOf('runtimeClasspath')
+          }
+          usage('java-runtime') {
+            fromResolutionResult()
+          }
+        }
     }
   }
 }
